1 - Rename User.getRealLastActiveAgo to User.getAbsoluteLastActiveAgo 2 - add comments.